--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,6 +1,7 @@
 @import '../../styles/shared/colors';
 
-.header {
-  padding: 0.5rem;
+.card {
+  padding: 1rem;
+  border-radius: 0.24rem;
   background-color: color('foreground');
 }
